--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=reports/2025-12-15.html">
     <title>제약 뉴스 리포트</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+        }
+        .loading {
+            text-align: center;
+        }
+        .loading h1 {
+            font-size: 24px;
+            margin-bottom: 16px;
+        }
+        .loading a {
+            color: white;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <p>최신 리포트로 이동 중... <a href="reports/2025-12-15.html">클릭</a></p>
+    <div class="loading">
+        <h1>📰 제약 뉴스 리포트</h1>
+        <p>최신 리포트로 이동 중...</p>
+        <p><a href="reports/2025-12-15.html">자동으로 이동하지 않으면 클릭하세요</a></p>
+    </div>
 </body>
 </html>
